@startuml

title "Database Class Diagram"

class user {
    - user_id (int auto_increment)
    + firstname (text)
    + lastname (text)
    + email (varchar(256))
    + password_hash (text)
    + born (date)
    + level (int)
}

class contaminated {
    # user_id (int)
    + contaminated_at (date)
}

class activity {
    - activity_id (int auto_increment)
    + start_at (datetime)
    + end_at (datetime)
    + city (text)
    + contact (bool)
}

class user_activity {
    # user_id (int)
    # activity_id (int)
}

class friends {
    # user_1 (int)
    # user_2 (int)
    - accepted (bool)
}

class notification {
    - notification_id (int auto_increment)
    + content (text)
}

class user_notification {
    # notification_id (int)
    # user_id (int)
}

user "user_id" *-left- "user_id" contaminated: fk_contaminated
user "user_id" *-right- "user_id" user_activity: fk_user_id_user_activity
activity "activity_id" *-- "activity_id" user_activity: fk_activity_id
user "user_id" *-down-- "user_1" friends: fk_friend_1
user "user_id" *-down-- "user_2" friends: fk_friend_2
user "user_id" *-- "user_id" user_notification: fk_user_id_user_notification
notification "notification_id" *-- "notification_id" user_notification: fk_notification_id

@enduml
